--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "swinfo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chrisbrinkmann.github.io/swinfo",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-particles-js": "^2.7.0",
     "react-scripts": "3.1.1",
     "tachyons": "^4.11.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
